[tool.poetry]
name = "pydew"
version = "0.1.0"
description = ""
authors = ["João Rafael <joaoraf@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "*"
pytmx = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = false

[tool.isort]
profile = "black"
line_length = 120
force_alphabetical_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
